--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
     "pdf-text-extract": "^1.5.0",
-    "walkdir": "^0.4.1"
+    "walkdir": "^0.4.1",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
