--- a/package.json
+++ b/package.json
@@ -16,17 +16,11 @@
     "dotenv": "^16.3.2",
     "elasticsearch": "^16.7.3",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "pdf-lib": "^1.17.1",
     "pdf-text-extract": "^1.5.0",
     "walkdir": "^0.4.1",
     "yarn": "^1.22.21"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.5",
-    "nodemon": "^3.0.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "nodemon": "^3.0.3"
   }
 }
